froontend_service/deploy/k8s/nginx-deployment.yaml
# Create nginx deployment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-nginx
  namespace: egs4
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend-nginx
  strategy: {}
  template:
    metadata:
      labels:
        app: frontend-nginx
    spec:
      containers:
        - name: nginx
          image: nginx
          resources: {}
          ports:
            - containerPort: 80
          volumeMounts:
            - name: frontend-nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
              readOnly: true
      restartPolicy: Always
      volumes:
        - name: frontend-nginx-config
          configMap:
            name: frontend-nginx-config
            items:
              - key: nginx.conf
                path: nginx.conf

# Create Service for Nginx
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-nginx
  namespace: egs4
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: frontend-nginx

# NGINX Config map
